[package]
name = "lsredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.1", features = [ "r2d2"] }
uuid = { version = "1.2.2", features = [ "v4" ]}
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
log = "^0.4"
actix = "0.13"
actix-codec = "0.5"
actix-files = "0.6"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3.0.0-beta.21"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"
